--- a/src/components/css/sidevideo.css
+++ b/src/components/css/sidevideo.css
@@ -1,7 +1,12 @@
+.homeVideo{
+    margin-bottom: 25px;
+}
+
 .homeVideo > h4{
     font-family: "Times New Roman", Times, serif;
     color: #6c5b37;
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 16px;
+    overflow-wrap: break-word;
 }
