added popular recipes page

--- a/src/components/css/videos.css
+++ b/src/components/css/videos.css
@@ -1,6 +1,7 @@
 .videosContainer{
     background: url(../images/bg-content.jpg);
     padding: 13px 36px 36px;
+    border-radius: 0px 0px 10px 10px;
     font-family: "Times New Roman", Times, serif;
     font-weight: bold;
     color: #8e0034;
@@ -8,6 +9,6 @@
 
 .videos{
     display: flex;
-    justify-content: space-evenly;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
