--- a/src/components/css/popRecipes.css
+++ b/src/components/css/popRecipes.css
@@ -1,4 +1,4 @@
-.recipesContainer{
+.popRecipesContainer{
     background: rgb(221, 214, 205);
     border-radius: 0px 0px 10px 10px;
     padding: 13px 0px 36px;
@@ -8,6 +8,7 @@
     background: url('../images/bg-content.jpg');
     padding: 13px 36px;
     margin: 25px 0px;
+    
 }
 
 .Heading{
@@ -24,6 +25,7 @@
 
 #ingredientsColLeft0, #ingredientsColLeft1, #ingredientsColLeft2, #ingredientsColRight0, #ingredientsColRight1, #ingredientsColRight2 {
     display: inline-block;
-    margin-left: 30px; 
+    flex-wrap: wrap;
+    margin-left: 16px; 
     color: #6c5b37;
 }
