--- a/src/components/css/pageTabs.css
+++ b/src/components/css/pageTabs.css
@@ -8,13 +8,6 @@
     margin-bottom: 36px;
 }
 
-#errorContainer{
-    background-image: url('../images/bg-content.jpg');
-    border-radius: 0px 0px 10px 10px;
-    padding: 13px 30px 0px 30px;
-    margin-bottom: 36px;
-}
-
 #ContainerDiv > a{
     width: 30%;
 }
@@ -38,4 +31,6 @@ a:hover .catagory > h4, a:hover .recipe > h4{
     font-family: "Times New Roman", Times, serif;
     font-weight: bold;
     color: #8e0034;
+    position: relative;
+    left: 200px;
 }
