--- a/src/components/css/sidevideo.css
+++ b/src/components/css/sidevideo.css
@@ -1,12 +1,19 @@
+.videosContainer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .homeVideo{
+    display: inline-block;
     margin-bottom: 25px;
 }
 
 .homeVideo > h4{
+    word-break: break-word; 
     font-family: "Times New Roman", Times, serif;
     color: #6c5b37;
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 16px;
-    overflow-wrap: break-word;
 }
