--- a/src/components/css/popRecipes.css
+++ b/src/components/css/popRecipes.css
@@ -1,7 +1,7 @@
 .popRecipesContainer{
     background: rgb(221, 214, 205);
     border-radius: 0px 0px 10px 10px;
-    padding: 13px 0px 36px;
+    padding: 13px 0px 1px;
 }
 
 .popRecipe0, .popRecipe1, .popRecipe2 {
@@ -11,7 +11,13 @@
     
 }
 
-.Heading{
+#Ingredient{
+    position: relative;
+    right: 200px;
+    padding-left: 15px;
+}
+
+.popRecipeHeading{
     display: flex;
     font-family: "Times New Roman", Times, serif;
     color: #8e0034;
@@ -25,7 +31,8 @@
 
 #ingredientsColLeft0, #ingredientsColLeft1, #ingredientsColLeft2, #ingredientsColRight0, #ingredientsColRight1, #ingredientsColRight2 {
     display: inline-block;
-    flex-wrap: wrap;
-    margin-left: 16px; 
+    word-break: break-all;
+    margin-left: 20px; 
     color: #6c5b37;
+    width: 30%;
 }
