--- a/src/components/css/siderecipes.css
+++ b/src/components/css/siderecipes.css
@@ -14,7 +14,7 @@
     font-size: 16px;
     color: #6c5b37;
     padding-left: 10px;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .sidetext:hover {
