--- a/src/components/css/sidevideo.css
+++ b/src/components/css/sidevideo.css
@@ -7,6 +7,7 @@
 .homeVideo{
     display: inline-block;
     margin-bottom: 25px;
+    width: 32%;
 }
 
 .homeVideo > h4{
@@ -16,4 +17,8 @@
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 16px;
+}
+
+#side{
+    width: 55%;
 }
