--- a/src/components/css/recipePage.css
+++ b/src/components/css/recipePage.css
@@ -12,7 +12,9 @@
     justify-content: space-between;
 }
 
-.mainMealImg{
+.MealImgVideo{
+    font-family: "Times New Roman", Times, serif;
+    color: #8e0034;
     width: 85%;
     height: 50%;
 }
@@ -20,9 +22,10 @@
 #mealImg{
     width: 70%;
     border: 3px solid white;
+    margin-bottom: 25px;
 }
 
-.recipeImgs{
+.recipeContent{
     display: flex;
 }
 
@@ -50,4 +53,20 @@
 
 .ingredient > a:hover > h6{
     color: #8e0034; 
+}
+
+.recipeVideo{
+    height: 100%;
+}
+
+.instructions{
+    font-family: "Times New Roman", Times, serif;
+    color: #8e0034;
+    text-align: center;
+}
+
+.instructions > h6{
+    text-align: left;
+    color: #6c5b37;
+    margin-bottom: 16px;
 }
