--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
- * {
-   box-sizing: border-box;
-   margin: 0;
-   padding: 0;
- }
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  text-align: center;
+}
 
- body{
-   background-image: url('./components//images/bg-body.jpg');
- }
+a {
+  text-decoration: none !important;
+}
+
+body {
+  background-color: antiquewhite;
+}
