--- a/src/components/css/recipePage.css
+++ b/src/components/css/recipePage.css
@@ -1,72 +1,74 @@
-.recipesContainer{
-    background-image: url('../images/bg-content.jpg');
-    border-radius: 0px 0px 10px 10px;
-    padding: 13px 30px;
-    margin-bottom: 36px;
+.recipesContainer {
+  background-image: url("../images/bg-content.jpg");
+  border-radius: 0px 0px 10px 10px;
+  padding: 13px 30px;
+  margin-bottom: 36px;
 }
 
-.recipeHeading{
-    display: flex;
-    font-family: "Times New Roman", Times, serif;
-    color: #8e0034;
-    justify-content: space-between;
+.recipeHeading,
+.ingredientsTitle {
+  display: flex;
+  font-family: "Times New Roman", Times, serif;
+  color: #8e0034;
+  justify-content: center;
+  margin-bottom: 0;
+  font-size: 25px;
 }
 
-.MealImgVideo{
-    font-family: "Times New Roman", Times, serif;
-    color: #8e0034;
-    width: 85%;
-    height: 50%;
+.MealImgVideo {
+  font-family: "Times New Roman", Times, serif;
+  color: #8e0034;
+  width: 85%;
+  height: 50%;
+  font-size: 22px;
 }
 
-#mealImg{
-    width: 70%;
-    border: 3px solid white;
-    margin-bottom: 25px;
+#mealImg {
+  width: 70%;
+  border: 5px solid white;
+  margin-bottom: 25px;
 }
 
-.recipeContent{
-    display: flex;
+.ingredients {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
-.ingredients{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
+.ingredient {
+  width: 33%;
+  margin-bottom: 10px;
+  padding-right: 1px;
 }
 
-.ingredient{
-    width: 33%;
-    margin-bottom: 10px;
-    padding-right: 1px;
+.ingredient > a > p,
+.ingredientsMessage {
+  word-break: break-word;
+  font-family: "Times New Roman", Times, serif;
+  color: #6c5b37;
+  font-weight: bold;
+  margin-bottom: 16px;
+  text-align: center;
 }
 
-.ingredient > a > h6{
-    word-break: break-word; 
-    font-family: "Times New Roman", Times, serif;
-    color: #6c5b37;
-    font-weight: bold;
-    margin-bottom: 16px;
-    text-align: center;
+.ingredient > a:hover > p {
+  color: #8e0034;
 }
 
-.ingredient > a:hover > h6{
-    color: #8e0034; 
+.recipeVideo {
+  height: 100%;
 }
 
-.recipeVideo{
-    height: 100%;
+.instructionsTitle {
+  font-family: "Times New Roman", Times, serif;
+  color: #8e0034;
+  text-align: center;
+  font-size: 23px;
 }
 
-.instructions{
-    font-family: "Times New Roman", Times, serif;
-    color: #8e0034;
-    text-align: center;
-}
-
-.instructions > h6{
-    text-align: left;
-    color: #6c5b37;
-    margin-bottom: 16px;
+.instructions > li {
+  text-align: left;
+  color: #6c5b37;
+  margin-bottom: 16px;
+  font-size: 18px;
 }
