--- a/src/components/css/videos.css
+++ b/src/components/css/videos.css
@@ -1,14 +1,18 @@
-.videosContainer{
-    background: url(../images/bg-content.jpg);
-    padding: 13px 36px 36px;
-    border-radius: 0px 0px 10px 10px;
-    font-family: "Times New Roman", Times, serif;
-    font-weight: bold;
-    color: #8e0034;
+.videosContainer {
+  background: url(../images/bg-content.jpg);
+  padding: 13px 36px 36px;
+  border-radius: 0px 0px 10px 10px;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: bold;
+  color: #8e0034;
 }
 
-.videos{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.videosHeader {
+  font-size: 25px;
+}
+
+.videos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
